# MegabyteStore

./: .gitignore  CMakeLists.txt  Consts.h  main.cpp
Controllers/: MemoryStorageController.cpp  MemoryStorageController.h  SalesController.cpp  SalesController.h
Internals/MenuSystem/: ExitMenuCommand.h  Menu.cpp  Menu.h  MenuBuilder.cpp  MenuBuilder.h  MenuInfoItem.cpp  MenuInfoItem.h
Internals/MenuSystem/Commands/: ExitMenuCommand.cpp  ExitMenuCommand.h  IMenuCommand.h  OpenSubmenuCommand.cpp  OpenSubmenuCommand.h
MemoryStorage/: AccountStorage.cpp  AccountStorage.h  ProductsStorage.cpp  ProductsStorage.h
MenuCommands/: LoginAdmCommand.cpp  LoginAdmCommand.h  LoginClientCommand.cpp  LoginClientCommand.h  MenuCommand1.cpp  MenuCommand1.h  ProductBuyCommand.cpp  ProductBuyCommand.h  RegisterClientCommand.cpp  RegisterClientCommand.h  RegisterProductCommand.cpp  RegisterProductCommand.h  RegistryProductCommand.cpp  RegistryProductCommand.h
Models/: Account.cpp  Account.h  CPU.cpp  CPU.h  Cart.cpp  Cart.h  GPU.cpp  GPU.h  Hardware.cpp  Hardware.h  Motherboard.cpp  Motherboard.h  Order.cpp  Order.h  PlacaMae.cpp  PlacaMae.h  PowerSupply.cpp  PowerSupply.h  Product.cpp  Product.h  Produto.cpp  Produto.h  RAMMemory.cpp  RAMMemory.h  Sales.cpp  Sales.h  Socket.cpp  Socket.h  StorageUnit.cpp  StorageUnit.h
Models/Enums/: AccountType.h  ProductType.h  StorageType.h
Models/Usuarios/: Account.cpp  Account.h
Services/IOService/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
Utils/: json.hpp
Utils/InfoLoders/: AccountsLoader.cpp  AccountsLoader.h  ProductsLoader.cpp  ProductsLoader.h  SalesLoader.cpp  SalesLoader.h
Utils/Json/: JsonSerializable.h  json.hpp
Utils/Read/: LineReader.cpp  LineReader.h  ReaderOptions.cpp  ReaderOptions.h
cadastro/: Account.cpp  Account.h  Admin.cpp  Admin.h  CMakeLists.txt  Cadastro.cpp  Cadastro.h  Client.cpp  Client.h  Conta.cpp  Conta.h  Login.cpp  Login.h  Register.cpp  Register.h  Session.cpp  Session.h  main.cpp
